# viz-3dtiles

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build-3d-tile.py  environment.yml  pyproject.toml  requirements.txt  run_testing.sh  setup.py
.github/workflows/: publish-docker-image.yaml  publish-docker-image.yml  python-lint-test.yaml
3dtiles/: build.py
data/: example.shx
pdg3dtiles/: BoundingVolume.py  Cesium3DTile.py  Cesium3DTileset.py  TreeGenerator.py  __init__.py
run-cesium/: README.md  cesium.js  index.html  server.js
run-cesium/tilesets/: model.b3dm  model.glb  tileset.json
run-cesium/tilesets/build-3d-tile-output/: tileset.json
run-cesium/tilesets/from-FME/: tileset.json
run-cesium/tilesets/from-FME/data/: data0.b3dm
test/: test.py  test_base_asset_content.py  test_bounding_volume.py  test_geohashes.py  test_multiple.py  test_tile.py  test_tileset.py  test_tree.py
test/example_data/: example.dbf  example.shp
test/example_data/tiled-geopackage/WorldCRS84Quad/13/1524/: 910.gpkg  911.gpkg
test/example_data/tiled-geopackage/WorldCRS84Quad/13/1525/: 910.gpkg  911.gpkg
test/run-cesium/: cesium.js  index.html  server.js  testing_config_tmpl.js
test/run-cesium/tilesets/build-3d-tile-output/: tileset.json
test/run-cesium/tilesets/build-output/: model.b3dm
tests/integration/: test_multiple.py
tests/integration/example_data/tiled-geopackage/WorldCRS84Quad/13/1525/: 911.gpkg
tests/integration/run-cesium/: README.md  cesium.js  server.js
tests/unit/: test_base_asset_content.py  test_bounding_volume.py  test_tile.py  test_tileset.py
viz_3dtiles/: BoundingVolume.py  BoundingVolumeBox.py  BoundingVolumeRegion.py  Cesium3DTile.py  Cesium3DTileset.py  StagedTo3DConverter.py  Tileset.py  TreeGenerator.py  __init__.py
