[project]
name = "viz_3dtiles"
version = "0.0.1"
description = "A module that converts vector geometry files to Cesium 3D Tilesets"
authors = [
    { name = "Lauren Walker", email = "walker@nceas.ucsb.edu" }
]
license = { text = "Apache License Version 2.0" }
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    "numpy >=1.20, <2.0",
    "pandas >=1.4, <2.0",
    "shapely >=2.0b2",
    "geopandas >=0.12, <1.0",
    "pdgpy3dtiles @ git+https://github.com/PermafrostDiscoveryGateway/py3dtiles.git#egg=pdgpy3dtiles"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
]

[project.urls]
Homepage = "https://github.com/PermafrostDiscoveryGateway/viz-3dtiles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py38']
