[project]
name = "pdg3dtiles"
version = "1.0.0"
description = "A module that converts vector geometry files to Cesium 3D Tilesets"
authors = [
    {name = "Robyn Thiessen-Bock", email = "thiessenbock@nceas.ucsb.edu"},
    {name = "Juliet Cohen", email = "jcohen@nceas.ucsb.edu"},
    {name = "Lauren Walker", email = "walker@nceas.ucsb.edu"},
    {name = "Matthew B. Jones", email = "jones@nceas.ucsb.edu"},
    {name = "Rushiraj Nenuji", email = "nenuji@nceas.ucsb.edu"},
    {name = "Alyona Kosobokova", email = "alyonak@nceas.ucsb.edu"}  
]
license = { text = "Apache License Version 2.0" }
readme = "README.md"
requires-python = ">=3.8, <=3.10"
dependencies = [
  "numpy >=1.20, <2.0",
  "pandas >=1.4, <2.0",
  "shapely >=2.0.0",
  "geopandas >=0.12, <1.0",
  "pyproj >=3.0.0",
  "open3d>=0.14,<0.19",
  "pdgpy3dtiles @ git+https://github.com/PermafrostDiscoveryGateway/py3dtiles.git",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "pytest",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/PermafrostDiscoveryGateway/viz-3dtiles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py38']